--- a/CorridaFiapWebAsp/appsettings.json
+++ b/CorridaFiapWebAsp/appsettings.json
@@ -6,6 +6,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "conexao": "Server=(localdb)\\\\MSSQLLocalDB;Database=LocalDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "conexao": "Server=(localdb)\\MSSQLLocalDB;Database=CorridaDB;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
