--- a/CorridaFiapWebAsp/Properties/launchSettings.json
+++ b/CorridaFiapWebAsp/Properties/launchSettings.json
@@ -3,7 +3,7 @@
     "windowsAuthentication": false, 
     "anonymousAuthentication": true, 
     "iisExpress": {
-      "applicationUrl": "http://localhost:59633",
+      "applicationUrl": "http://localhost:26493",
       "sslPort": 0
     }
   },
@@ -15,7 +15,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "CorridaFiapWebAsp": {
+    "_06_Fiap.Web.AspNet": {
       "commandName": "Project",
       "launchBrowser": true,
       "applicationUrl": "http://localhost:5000",
